[gd_scene load_steps=20 format=3 uid="uid://bu1iehod0e2vg"]

[ext_resource type="Script" uid="uid://dsyej237do3di" path="res://Scripts/player.gd" id="1_m1du5"]
[ext_resource type="Texture2D" uid="uid://codso364d43re" path="res://Sprites/Characters/MainCharacter/SpriteSheet-Character.png" id="2_6t5aa"]
[ext_resource type="Script" uid="uid://bkht80ouot74a" path="res://addons/phantom_camera/scripts/phantom_camera_host/phantom_camera_host.gd" id="5_dbp04"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3smsa"]
size = Vector2(12, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tx1dd"]
size = Vector2(11.875, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8erm5"]
size = Vector2(11.6402, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f1ek2"]
size = Vector2(10.582, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gymyn"]
size = Vector2(15, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pu2lt"]
size = Vector2(8, 24)

[sub_resource type="Animation" id="Animation_vgqql"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8erm5"]
resource_name = "dash"
length = 0.50001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [50, 51, 52]
}

[sub_resource type="Animation" id="Animation_gymyn"]
resource_name = "death"
length = 0.45
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 65]
}

[sub_resource type="Animation" id="Animation_x3wgy"]
resource_name = "fall"
length = 0.60001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [30, 32, 31]
}

[sub_resource type="Animation" id="Animation_tx1dd"]
resource_name = "hit"
length = 0.9
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [70, 71, 72, 73, 74, 75, 76, 77, 78]
}

[sub_resource type="Animation" id="Animation_f1ek2"]
resource_name = "idle"
length = 1.90001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1.1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_fkybt"]
resource_name = "jump"
length = 0.50001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [20, 21, 22]
}

[sub_resource type="Animation" id="Animation_6t5aa"]
resource_name = "walking"
length = 0.90001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.00266031, 0.10266, 0.20266, 0.30266, 0.40266, 0.50266, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14, 15, 16, 17, 18]
}

[sub_resource type="Animation" id="Animation_3smsa"]
resource_name = "wall_slide"
length = 0.70001
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tx1dd"]
_data = {
&"RESET": SubResource("Animation_vgqql"),
&"dash": SubResource("Animation_8erm5"),
&"death": SubResource("Animation_gymyn"),
&"fall": SubResource("Animation_x3wgy"),
&"hit": SubResource("Animation_tx1dd"),
&"idle": SubResource("Animation_f1ek2"),
&"jump": SubResource("Animation_fkybt"),
&"walking": SubResource("Animation_6t5aa"),
&"wall_slide": SubResource("Animation_3smsa")
}

[node name="player" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_m1du5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 9.315)
scale = Vector2(0.77, 0.77)
texture = ExtResource("2_6t5aa")
hframes = 10
vframes = 8

[node name="AndarDireita" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2, 9)
shape = SubResource("RectangleShape2D_3smsa")
disabled = true

[node name="AndarEsquerda" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-2.0625, 9)
shape = SubResource("RectangleShape2D_tx1dd")
disabled = true

[node name="WallSlideDireita" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1.5, 9)
scale = Vector2(0.945, 1)
shape = SubResource("RectangleShape2D_8erm5")
disabled = true

[node name="WallSlideEsquerda" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(3.57628e-07, 9)
scale = Vector2(0.75, 1)
shape = SubResource("RectangleShape2D_f1ek2")
disabled = true

[node name="Idle" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, 9)
shape = SubResource("RectangleShape2D_gymyn")
disabled = true

[node name="MainCollision" type="CollisionShape2D" parent="."]
position = Vector2(1, 9)
shape = SubResource("RectangleShape2D_pu2lt")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 1)
zoom = Vector2(3.54, 3.54)
limit_smoothed = true

[node name="PhantomCameraHost" type="Node" parent="Camera2D"]
process_priority = 300
process_physics_priority = 300
script = ExtResource("5_dbp04")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tx1dd")
}
